
    * Log --short and --line are much faster when -r is not specified.
      (Aaron Bentley)

    * Merge is faster.  We no longer check a file's existence unnecessarily
      when merging the execute bit.  (Aaron Bentley)

    * The smart protocol client is slightly faster, because it now only queries
      the server for the protocol version once per connection.  Also, the HTTP
      transport will now automatically use a smart server if one is present.
      (Andrew Bennetts)

  BUGFIXES:

    * Add ``root_client_path`` parameter to SmartWSGIApp and
      SmartServerRequest.  This makes it possible to publish filesystem
      locations that don't exactly match URL paths. SmartServerRequest
      subclasses should use the new ``translate_client_path`` and
      ``transport_from_client_path`` methods when dealing with paths received
      from a client to take this into account.  (Andrew Bennetts, #124089)

    * ``bzr mv a b`` can be now used also to rename previously renamed
      directories, not only files. (Lukáš Lalinský, #107967)

    * ``bzr uncommit --local`` can now remove revisions from the local
      branch to be symmetric with ``bzr commit --local``.
      (John Arbash Meinel, #93412)

    * Don't ask for a password if there is no real terminal.
      (Alexander Belchenko, #69851)

    * Implement handling of basename parameter for DefaultMail.  (James Westby)

    * Launchpad locations (lp: URLs) can be pulled.  (Aaron Bentley, #181945)

    * vsftp's return ``550 RNFR command failed.`` supported.
      (Marcus Trautwig, #129786)

  DOCUMENTATION:

    * Improved documentation on send/merge relationship. (Peter Schuller)

    * Minor fixes to the User Guide. (Matthew Fuller)

    * Reduced the evangelism in the User Guide. (Ian Clatworthy)

  API BREAKS:

    * Attempting to pull data from a ghost aware repository (e.g. knits) into a
      non-ghost aware repository such as weaves will now fail if there are
      ghosts.  (Robert Collins)
